...

class _MenuPageState extends State<MenuPage> {
  int _currentIndex = 0;

  final pages = [
    const Center(child: Text('Home')),
    //const Center(child: Text('Faturas')),
    const StorePage(),
    const Center(child: Text('Ajuda')),
    const Center(child: Text('Perfil')),
  ];

  @override
...
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.title),
      ),
      body: pages[_currentIndex],
      bottomNavigationBar: BottomNavigationBar(
          key: const Key('menu-bottom'),
          currentIndex: _currentIndex,
          type: BottomNavigationBarType.fixed,
          backgroundColor: Colors.white,
          selectedItemColor: Colors.green,
          iconSize: 32,
          onTap: (index) {
...
