...
	@override
	Widget build(BuildContext context) {
		final double categoryHeight =((MediaQuery.of(context).size.height - 300) / 3) + 50;
			
		return SingleChildScrollView(
		physics: const BouncingScrollPhysics(),
      key: const Key('sections-scroll'),
		scrollDirection: Axis.horizontal,
		child: Container(
			margin: const EdgeInsets.symmetric(vertical: 20, horizontal: 20),
			child: FittedBox(
			fit: BoxFit.fill,
			alignment: Alignment.topCenter,
...
				),
				GestureDetector(
          onTap: () => {
                  Navigator.push(context,
                      MaterialPageRoute(builder: (context) => SectionPage()))
                },
                key: const Key('section-box'),
                  child: Container(
                    width: 200,
                    margin: const EdgeInsets.only(right: 20),
                    height: categoryHeight,
                    decoration: BoxDecoration(
                      color: Colors.lightBlueAccent.shade400,
...
